--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -4,3 +4,12 @@ nodaemon=false
 [program:sshd]
 command=/usr/sbin/sshd -D
 
+[program:docker]
+user=root
+autostart=true
+autorestart=true
+command=/usr/bin/docker -d
+redirect_stderr=true
+stdout_logfile=/var/log/docker/%(program_name)s.log
+stdout_logfile_maxbytes=10MB
+stdout_logfile_backups=10
