--- a/Makefile.docker
+++ b/Makefile.docker
@@ -15,10 +15,10 @@ DOCKID  := $(shell sudo docker ps|grep 8883|grep 8882|cut -d " " -f1)
 DOCKID2 := $(shell sudo docker ps|grep 1883|grep 22|cut -d " " -f1)
 DOCKEXP := -p ${DOCKIPF}8880:8080 -p ${DOCKIPF}8881:8081 -p ${DOCKIPF}8882:22 -p ${DOCKIPF}8883:1883 -p ${DOCKIPF}8884:9001 -p ${DOCKIPF}8885:8085
 DOCKDIR := /opt/janitoo/docker
-DOCKPTH := /root/.ssh /etc/nginx/conf.d/ /var/log/nginx/ /etc/mosquitto/ /var/data/mosquitto/ /var/log/mosquitto/ /etc/supervisord/ /var/log/supervisor/ /janitoo/home/ /janitoo/log/ /janitoo/etc/
-DOCKVOL := -v $(DOCKDIR)/root/.ssh/:/root/.ssh/ -v $(DOCKDIR)/etc/nginx/conf.d/:/etc/nginx/conf.d/ -v $(DOCKDIR)/var/log/nginx/:/var/log/nginx/ \
-	-v $(DOCKDIR)/etc/mosquitto/:/etc/mosquitto/ -v $(DOCKDIR)/var/data/mosquitto/:/var/data/mosquitto/ -v $(DOCKDIR)/var/log/mosquitto/:/var/log/mosquitto/ \
-	-v $(DOCKDIR)/var/log/supervisor/:/var/log/supervisor/ -v $(DOCKDIR)/etc/supervisord/:/etc/supervisord/ \
+DOCKPTH :=  /var/log/ /root/.ssh /etc/nginx/conf.d/ /etc/mosquitto/ /var/lib/mosquitto/ /etc/supervisor/ /janitoo/home/ /janitoo/log/ /janitoo/etc/
+DOCKVOL := -v $(DOCKDIR)/root/.ssh/:/root/.ssh/ -v $(DOCKDIR)/var/log/:/var/log/ -v $(DOCKDIR)/etc/nginx/conf.d/:/etc/nginx/conf.d/ \
+	-v $(DOCKDIR)/etc/mosquitto/:/etc/mosquitto/ -v $(DOCKDIR)/var/lib/mosquitto/:/var/lib/mosquitto/ \
+	-v $(DOCKDIR)/etc/supervisor/:/etc/supervisor/ \
 	-v $(DOCKDIR)/janitoo/home/:/opt/janitoo/home/ -v $(DOCKDIR)/janitoo/log/:/opt/janitoo/log/ -v $(DOCKDIR)/janitoo/etc/:/opt/janitoo/etc/
 #~ DOCKVOL := -v $(DOCKDIR)/var/log/nginx/:/var/log/nginx/ \
 	#~ -v $(DOCKDIR)/var/data/mosquitto/:/var/data/mosquitto/ -v $(DOCKDIR)/var/log/mosquitto/:/var/log/mosquitto/ \
@@ -30,27 +30,19 @@ docker-vols:
 	-mkdir -p $(DOCKDIR)
 	-for dir in $(DOCKPTH); do  mkdir -p $(DOCKDIR)/$$dir; done
 
-docker-conf:
-	@echo "Retrieve configuration for container ID:${DOCKCNT}"
-	sudo docker start ${DOCKCNT} /root/rescue.sh
+docker-conf: docker-vols
+	@echo "Retrieve configuration from live container"
+	sudo docker run -d -t ${DOCKEXP} ${DOCKIMG}
 	sleep 5
-	-scp -r -P 8882 root@${DOCKIP}:/root/.ssh/* $(DOCKDIR)/root/
-	-scp -r -P 8882 root@${DOCKIP}:/etc/supervisord/* $(DOCKDIR)/etc/supervisord/
+	-ssh-copy-id root@${DOCKIP} -p 8882
+	-scp -r -P 8882 root@${DOCKIP}:/root/.ssh/* $(DOCKDIR)/root/.ssh/
+	-scp -r -P 8882 root@${DOCKIP}:/etc/supervisor/* $(DOCKDIR)/etc/supervisor/
 	-scp -r -P 8882 root@${DOCKIP}:/etc/nginx/* $(DOCKDIR)/etc/nginx/
 	-scp -r -P 8882 root@${DOCKIP}:/etc/mosquitto/* $(DOCKDIR)/etc/mosquitto/
+	-scp -r -P 8882 root@${DOCKIP}:/var/log/* $(DOCKDIR)/var/log/
 	-scp -r -P 8882 root@${DOCKIP}:/opt/janitoo/etc/* $(DOCKDIR)/janitoo/etc/
-	sudo docker stop ${DOCKCNT}
-#~ docker-conf:
-	#~ @echo "Retrieve configuration from live container"
-	#~ sudo docker run -d -t ${DOCKEXP} ${DOCKIMG} /root/rescue.sh
-	#~ sleep 5
-	#~ -ssh-copy-id root@${DOCKIP} -p 8882
-	#~ -scp -r -P 8882 root@${DOCKIP}:/root/.ssh/* $(DOCKDIR)/root/.ssh/
-	#~ -scp -r -P 8882 root@${DOCKIP}:/etc/supervisord/* $(DOCKDIR)/etc/supervisord/
-	#~ -scp -r -P 8882 root@${DOCKIP}:/etc/nginx/* $(DOCKDIR)/etc/nginx/
-	#~ -scp -r -P 8882 root@${DOCKIP}:/etc/mosquitto/* $(DOCKDIR)/etc/mosquitto/
-	#~ -scp -r -P 8882 root@${DOCKIP}:/opt/janitoo/etc/* $(DOCKDIR)/janitoo/etc/
-	#~ sudo docker stop `sudo docker ps|grep 8883|grep 8882|cut -d " " -f1`
+	sudo docker stop `sudo docker ps|grep 8883|grep 8882|cut -d " " -f1`
+	sudo chown -Rf root:root /opt/janitoo/docker/
 
 docker-create:
 	@echo "Create new container"
@@ -115,7 +107,7 @@ ssh:
 
 sshkey-copy:
 	@echo "Copy keys to container ID:${DOCKCNT}"
-	sudo docker start ${DOCKCNT} /root/rescue.sh
+	sudo docker start ${DOCKCNT}
 	sleep 5
 	-ssh-copy-id root@${DOCKIP} -p 8882
 	sudo docker stop ${DOCKCNT}
