--- a/Makefile.docker
+++ b/Makefile.docker
@@ -67,6 +67,10 @@ docker-purge:
 	-sudo docker rm -v $$(docker ps -a -q -f status=created)
 	@echo "Docker containers purges"
 
+docker-purge-all: docker-purge
+	-sudo docker images -q --no-trunc -f dangling=true | xargs docker rmi
+	@echo "Docker containers purges"
+
 docker-live:
 	@echo "Start container in live mode. All your updates will be lost !!!"
 	sudo docker run -i -t ${DOCKEXP} ${DOCKIMG}
